# Chat-App/docs/swagger.json
@@ -32,19 +32,19 @@
                     "200": {
                         "description": "Токен доступа",
                         "schema": {
-                            "$ref": "#/definitions/auth.TokenResponse"
+                            "$ref": "#/definitions/swg.TokenResponse"
                         }
                     },
                     "401": {
                         "description": "Неверные данные для входа",
                         "schema": {
-                            "$ref": "#/definitions/auth.ErrorResponse"
+                            "$ref": "#/definitions/swg.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Ошибка генерации токена",
                         "schema": {
-                            "$ref": "#/definitions/auth.ErrorResponse"
+                            "$ref": "#/definitions/swg.ErrorResponse"
                         }
                     }
                 }
@@ -78,34 +78,99 @@
                     "201": {
                         "description": "Пользователь успешно зарегистрирован",
                         "schema": {
-                            "$ref": "#/definitions/auth.SuccessResponse"
+                            "$ref": "#/definitions/swg.SuccessResponse"
                         }
                     },
                     "409": {
                         "description": "Имя пользователя или почта уже используется",
                         "schema": {
-                            "$ref": "#/definitions/auth.ErrorResponse"
+                            "$ref": "#/definitions/swg.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Ошибка хеширования или создания пользователя",
                         "schema": {
-                            "$ref": "#/definitions/auth.ErrorResponse"
+                            "$ref": "#/definitions/swg.ErrorResponse"
                         }
                     }
                 }
             }
-        }
-    },
-    "definitions": {
-        "auth.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
+        },
+        "/rooms": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получения списка доступных комнат после авторизации",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rooms"
+                ],
+                "summary": "Получения списка комнат",
+                "responses": {
+                    "200": {
+                        "description": "Список комнат",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/chat.Room"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Требуется авторизация",
+                        "schema": {
+                            "$ref": "#/definitions/swg.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Не удалось получить список комнат",
+                        "schema": {
+                            "$ref": "#/definitions/swg.ErrorResponse"
+                        }
+                    }
                 }
             }
         },
+        "/rooms/{room_id}/messages": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Получения истории чата комнаты после авторизации",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rooms"
+                ],
+                "summary": "Получения истории чата комнаты",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID комнаты",
+                        "name": "room_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        }
+    },
+    "definitions": {
         "auth.LoginInput": {
             "type": "object",
             "required": [
@@ -140,7 +205,23 @@
                 }
             }
         },
-        "auth.SuccessResponse": {
+        "chat.Room": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "swg.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "swg.SuccessResponse": {
             "type": "object",
             "properties": {
                 "message": {
@@ -148,7 +229,7 @@
                 }
             }
         },
-        "auth.TokenResponse": {
+        "swg.TokenResponse": {
             "type": "object",
             "properties": {
                 "token": {
